--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,69 +1,12 @@
+/* Import Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
+/* Global Styles */
 body {
     font-family: Roboto Flex;
     font-size: 22px;
     margin: 0;
     padding: 0;
-}
-
-main section img {
-    box-sizing: border-box;
-}
-
-.card-img {
-    border: 10px solid #DAC2A4;
-}
-
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
-}
-
-footer .social img {
-    padding-top: 15px;
-}
-
-#logo_link {
-    padding-top: 5px;
-}
-
-h2 {
-    margin: 0;
-}
-
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-}
-
-nav a {
-    text-align: center;
-    color: #fcfbfb;
-    text-decoration: none;
-    padding: 35px;
-}
-
-#hero-msg h1 {
-    text-align: center;
-}
-
-#hero-msg h4 {
-    text-align: center;
-}
-
-.button-box {
-    text-align: center;
-}
-
-main section {
-    text-align: center;
-}
-
-#background {
-    height: 725px;
-}
-
-body {
     background-color: #fcfbfb;
 }
 
@@ -72,12 +15,78 @@ header {
     font-family: Roboto Flex;
 }
 
-nav a:hover {
-    background-color: black;
-    color: #d9c2a3
+h2 {
+    margin: 0;
 }
 
-.book{
+h4 {
+    color: black;
+}
+
+/* Layout */
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+main section {
+    text-align: center;
+}
+
+main section img {
+    box-sizing: border-box;
+}
+
+/* Hero Section */
+#hero-msg h1 {
+    text-align: center;
+}
+
+#hero-msg h4 {
+    text-align: center;
+}
+
+#background {
+    height: 725px;
+    background-color: #DAC2A4;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+/* Navigation */
+nav a {
+    text-align: center;
+    color: #fcfbfb;
+    text-decoration: none;
+    padding: 35px;
+}
+
+nav a:hover {
+    background-color: black;
+    color: #d9c2a3;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+/* Cards */
+.card-img {
+    border: 10px solid #DAC2A4;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+/* Buttons */
+.button-box {
+    text-align: center;
+}
+
+.book {
     color: #596154;
     text-decoration: none;
     font-family: Roboto Flex;
@@ -104,59 +113,14 @@ nav a:hover {
 
 .join:hover {
     background-color: #DAC2A4;
-    color: black
+    color: black;
 }
 
-#background {
-    background-color: #DAC2A4;
-}
-
+/* Messages */
 .msg {
     background-color: #6F7364;
     line-height: 1.5em;
     padding: 35px;
-}
-
-footer {
- background-color: #6F7364;
- color: #DAC2A4;
- padding: 25px 50px;
- margin-top: 200px;
-}
-
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-
-.logo {
-    width: 80px;
-}
-
-#hero-img {
-    width: 100%;
-}
-
-footer a {
-    text-decoration: none;
-    color: #DAC2A4;
-}
-
-footer p {
-    font-size: 1.2em;
-}
-
-footer p a:hover {
-    text-decoration: underline;
-}
-
-.home-title {
-    color: black;
-    margin-top: 10px;
-}
-
-h4 {
-    color: black;
 }
 
 .msg h2 {
@@ -170,11 +134,46 @@ h4 {
     padding-bottom: 15px;
 }
 
-footer a:hover {
-    color: #fcfbfb;
+/* Footer */
+footer {
+    background-color: #6F7364;
+    color: #DAC2A4;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #DAC2A4;
+}
+
+footer a:hover {
+    color: #fcfbfb;
+    text-decoration: underline;
+}
+
+footer p {
+    font-size: 1.2em;
+}
+
+/* Icons and Logos */
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+.logo {
+    width: 80px;
+}
+
+/* Home Title */
 .home-title {
     font-family: Roboto Flex;
     font-size: 2em;
+    color: black;
+    margin-top: 10px;
 }
