--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -13,6 +13,8 @@ body {
 header {
     background-color: rgba(20,30,13, .7);
     font-family: Roboto Flex;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 h2 {
@@ -37,25 +39,56 @@ main section img {
     box-sizing: border-box;
 }
 
+#home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 /* Hero Section */
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-msg h1 {
     text-align: center;
 }
 
 #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 
 #background {
     height: 725px;
     background-color: #DAC2A4;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 #hero-img {
     width: 100%;
 }
 
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 /* Navigation */
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a {
     text-align: center;
     color: #fcfbfb;
@@ -70,14 +103,53 @@ nav a:hover {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 /* Cards */
 .card-img {
     border: 10px solid #DAC2A4;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+    width: 100%;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    margin: 200px 0;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+    margin: 200px 0;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
     margin: 200px 0;
 }
 
@@ -121,6 +193,9 @@ nav a:hover {
     background-color: #6F7364;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 .msg h2 {
@@ -140,6 +215,9 @@ footer {
     color: #DAC2A4;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer .social img {
@@ -174,6 +252,51 @@ footer p {
 .home-title {
     font-family: Roboto Flex;
     font-size: 2em;
-    color: black;
+    color: #DAC2A4;
     margin-top: 10px;
+}
+
+/* Mobile Viewing*/
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
