--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -39,7 +39,7 @@ main section img {
     box-sizing: border-box;
 }
 
-#home-grid {
+.home-grid {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 }
