--- a/ice_challenge_4/styles/styles.css
+++ b/ice_challenge_4/styles/styles.css
@@ -14,15 +14,14 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: white;
+    background-color: #1E1E1E;
 }
 
 .card {
     width: 320px;
     background: white;
-    border-radius: 8px;
+    border-radius: 15px;
     overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .image-container img {
