--- a/personal_site/styles/site-plan.css
+++ b/personal_site/styles/site-plan.css
@@ -6,25 +6,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #FFFFFF   ;
-  --secondary-color: #81F4E1 ;
-  --accent1-color: #56CBF9;
-  --accent2-color: #FF729F;
+  --primary-color: #F4F4F9;
+  --secondary-color: #5C67F2;
+  --accent1-color: #333333;
+  --accent2-color: #F5CC00;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Montserrat, Helvetica, sans-serif;
   --paragraph-font: Montserrat, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #5C67F2;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: #333333;
+  --nav-link-color: white;
+  --nav-background-color: #5C67F2;
+  --nav-hover-link-color: #F5CC00;
+  --nav-hover-background-color: #5C67F2;
 }
 
 
